--- a/P01_2022BB650_2022LM653/appsettings.json
+++ b/P01_2022BB650_2022LM653/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DatosDbConnection": "Data Source = DESKTOP-8C2CI7E ; Initial Catalog = Reservas_de_parqueo; ; User id = sa ; Password = gatocafe; Connection Timeout = 120 ; Encrypt = False"
+    //"DatosDbConnection": "Data Source=DESKTOP-8C2CI7E; Initial Catalog=Reservas_de_parqueo; User ID=sa; Password=gatocafe; Connection Timeout=120; Encrypt=False"
+    "DatosDbConnection": "Data Source=DESKTOP-MP89LU5; Initial Catalog=Reservas_de_parqueo; User ID=jona; Password=4321; Connection Timeout=120; Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
@@ -10,3 +11,4 @@
   },
   "AllowedHosts": "*"
 }
+
